# jclaw

./: .distignore  .dockerignore  .env.example  .gitattributes  .gitignore  .play-version  AGENTS.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Jenkinsfile.renovate  LICENSE  README.md  build.gradle.kts  docker-compose.yml  docker-entrypoint.sh  gradle.properties  install.ps1  install.sh  jclaw.sh  renovate.json  renovate.json5  settings.gradle.kts
.claude/commands/: coverage.md  deploy.md  docs.md  quality.md  renovate.md  secret-scan.md  sonar.md  wcag-audit.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: post-checkout  pre-commit  pre-push
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: check.yml  codeql.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/agents/: AgentExecutionSink.java  AgentPromptPreparer.java  AgentRouter.java  AgentRunner.java  AudioRetryStrategy.java  CancellationManager.java  ChannelInboundDispatcher.java  CompactionGate.java  CompressionPipeline.java  ContextWindowManager.java  ConversationSink.java  DangerousActionGate.java  GeneratedAttachment.java  ImageRetryStrategy.java  McpServerCatalog.java  MessageDeduplicator.java  MessageHydrator.java  ModelResolver.java  ParallelToolExecutor.java  QueueDrainOrchestrator.java  RunCancelledException.java  SkillLoader.java  SkillVersionManager.java  StreamingAgentRunner.java  SystemPromptAssembler.java  TaskRunSink.java  TelegramMessageAddressing.java  ToolAction.java  ToolCallLoopRunner.java  ToolCatalog.java  ToolContext.java  ToolRegistry.java  TruncationDiagnostics.java  UsageMetricsBuilder.java  VisionAudioAssembler.java
app/channels/: ApprovalRegistry.java  Channel.java  ChannelRegistry.java  ChannelStreamingSink.java  ChannelTransport.java  FlexmarkChannelEmitter.java  IdleDebounceBuffer.java  InboundCallback.java  InboundEventDedup.java  InboundMessage.java  PendingAttachment.java  SlackAccessPolicy.java  SlackApprovalCallback.java  SlackApprovalService.java  SlackChannel.java  SlackDedup.java  SlackFileDownloader.java  SlackFileUploader.java  SlackInbound.java  SlackMarkdownFormatter.java  SlackOutboundPlanner.java  SlackPendingFile.java  SlackSocketModeRunner.java  SlackStreamingSink.java  SlackWebApi.java  StagedDownload.java  TelegramAccessPolicy.java  TelegramAdminSender.java  TelegramApprovalCallback.java  TelegramApprovalService.java  TelegramBotApiHttpClients.java  TelegramBotIdentity.java  (+43 more)
certs/: .env.example
conf/: application.conf  application.prod.example.conf  common-passwords.txt  dependencies.yml  jacoco-agent.properties  log4j2-prod.xml  log4j2-test.xml  log4j2.xml  nginx.example.conf  play.plugins  routes  sonar.properties
docs/: architecture-backend.md  architecture-frontend.md  audit-2026-06-03.md  component-inventory-frontend.md  data-models-backend.md  deep-dive-voice-tts.md  deployment-guide.md  development-guide.md  integration-architecture.md  project-overview.md  project-parts.json  project-scan-report.json  source-tree-analysis.md  subagents-user-guide.md
frontend/: .gitignore  app.vue  components.json  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.mjs  tailwind.config.js  vitest.config.ts
loadtest/: prompts.txt
mcp-server/: README.md  build.gradle.kts
modules/: docviewer
sidecar/: verify-locks.sh
sidecar/asr/: .gitignore  README.md  align.py  eval.py  meralion.py  pyproject.toml  qwen_audio.py  serve.py  transcribe.py
sidecar/asr/eval/: parity.py
sidecar/asr/eval/gold/: haram-debate-transcript.json  haram-debate.uem
sidecar/diarize/: .gitignore  README.md  diarize.py  embed.py  eval.py  hf_prefetch.py  msdd.py  pyproject.toml  separate.py  ser.py  serve.py  transcribe.py
sidecar/diarize-ng/: .gitignore  README.md  pyproject.toml
sidecar/diarize-ng/diarng/: __init__.py  asr.py  assign.py  audio.py  cli.py  clustering.py  embeddings.py  evalkit.py  identity.py  pipeline.py  refine.py  segmentation.py  serve.py  types.py
sidecar/diarize-ng/scripts/: smoke.py
sidecar/diarize-ng/tests/: test_asr.py  test_assign.py  test_audio.py  test_clustering.py  test_embeddings.py  test_evalkit.py  test_identity.py  test_pipeline.py  test_refine.py  test_segmentation.py
sidecar/diarize-ng/train/: README.md  embed_finetune.md  seg_finetune.py
sidecar/diarize-ng/train/diarizationlm/: peft_train.py  prep_data.py
sidecar/diarize/eval/: fetch-ami.sh
sidecar/diarize/eval/gold/: haram-debate-transcript.json  haram-debate.rttm
sidecar/flux/: README.md  pyproject.toml  serve.py
sidecar/tts/: .gitignore  README.md  pyproject.toml  serve.py  synth.py
sidecar/video/: .gitignore  README.md  pyproject.toml  serve.py
test/: AcpChannelGateTest.java  AcpEventMapperTest.java  AcpHarnessConfigValidationTest.java  AcpWorkdirTest.java  AgentCompressionTest.java  AgentExecutionSinkTest.java  AgentMemorySettingsTest.java  AgentRenameMigrationTest.java  AgentRouterTest.java  AgentRunnerCancellationTest.java  AgentRunnerCompactionTest.java  AgentRunnerContextWindowTest.java  AgentRunnerCoreTest.java  AgentRunnerDedupTest.java  AgentRunnerErrorEnvelopeTest.java  AgentRunnerStreamingPathTest.java  AgentRunnerSubagentTest.java  AgentRunnerToolCallIdTest.java  AgentRunnerUsageTest.java  AgentRunnerWebhookDispatchTest.java  AgentServiceTest.java  AgentSystemTest.java  AlignmentModelManagerTest.java  ApiAcpHarnessControllerTest.java  ApiAgentsControllerCoverageTest.java  ApiAgentsControllerTest.java  ApiAppInvokeControllerNoTransactionTest.java  ApiAppInvokeControllerTest.java  ApiAppsControllerTest.java  ApiAttachmentsControllerTest.java  ApiAuthControllerTest.java  ApiBindingsControllerTest.java  ApiCaptionControllerTest.java  ApiChannelsControllerTest.java  ApiChatControllerTest.java  ApiConfigControllerTest.java  ApiControllerTest.java  ApiControllerWorkspaceStatsTest.java  ApiConversationsControllerBranchTest.java  ApiConversationsControllerSchemaDriftTest.java  (+430 more)
(+1034 files in other folders)
