[project]
name = "jclaw-video-sidecar"
version = "0.1.0"
description = "Local video-generation sidecar for jclaw (WAN 2 / LTX) — JCLAW-232/233"
requires-python = ">=3.10"
# One model per process (the active local engine, passed via --model). Async protocol
# (submit/poll/result) designed in SV-3 / JCLAW-512: video takes minutes, so unlike the
# synchronous Flux image sidecar this returns a job handle and the jclaw runner polls.
dependencies = [
    "torch>=2.4",
    "diffusers>=0.32",
    "transformers>=4.46",
    "accelerate>=1.0",
    "huggingface_hub>=0.26",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    # protobuf + tiktoken: the LTX T5 tokenizer needs one of these and diffusers/transformers
    # don't pull them transitively — SV-2 found the first run fails without them.
    "protobuf>=4.25",
    "tiktoken>=0.7",
    "imageio[ffmpeg]>=2.34",
    "pillow>=10.0",
]

# torch wheels are platform-specific (same as the Flux sidecar):
#  - macOS / Apple Silicon: the default PyPI wheel ships CPU + MPS — no extra config.
#    LTX runs here (best-effort, slow); the faster MLX backend is a JCLAW-233 follow-up.
#  - Linux + NVIDIA: the default PyPI wheel is CPU-only; install the CUDA build via
#      UV_TORCH_BACKEND=cu124 uv run serve.py ...      (uv >= 0.5 auto-selects)
#    WAN local (JCLAW-232) is NVIDIA-only per SV-2.
#  - CPU-only hosts: non-viable for video; the sidecar refuses on the free-VRAM gate.
